# DeepRD

./: .env.template  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
graph_generator/: generator.cpp  graph_generator.py
llm_prediction/: llm_cache.py  llm_inference.py  llm_prediction.py
llm_results/: llm_metrics.py
llm_results/logic/: FINAL_LOGIC_llm_results_20250725_002037_o3-mini.json  FINAL_LOGIC_llm_results_20250725_004033_gpt-4o.json  FINAL_LOGIC_llm_results_20250725_004739_deepseek-ai_DeepSeek-V3.json  FINAL_LOGIC_llm_results_20250725_005647_o3.json  FINAL_LOGIC_llm_results_20250725_112013_deepseek-ai_DeepSeek-R1.json
llm_results/symbolic/: FINAL_llm_results_20250724_215314_o3-mini.json  FINAL_llm_results_20250724_220322_gpt-4o.json  FINAL_llm_results_20250724_222511_deepseek-ai_DeepSeek-R1.json  FINAL_llm_results_20250724_230912_deepseek-ai_DeepSeek-V3.json  FINAL_llm_results_20250724_234305_o3.json
proof_verification/: proof_verification.py  sample_and_corrupt.py
real_world_graphs_and_proofs/: data_to_triples.py  generate_histograms.py  lookahead_numba.py  old_proof_lookahead_results_full.tsv  pairwise_distances_numba.py  proof_lookahead_results_full.tsv
real_world_graphs_and_proofs/data/: branch_count_conceptnet-5.7.0.tsv  branch_count_ogbl-wikikg2.tsv  branch_count_ogbn-papers100M.tsv  branch_count_wikidata5m_all_triplet.tsv  conceptnet-5.7.0_lookahead_results_300k.txt  ogbl-wikikg2_lookahead_results.txt  ogbn-papers100M_lookahead_results_30k.txt
(+48 files in other folders)
