[project]
name = "deeprd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=18.0.0,<25.0.0",
    "matplotlib>=3.4.0,<4.0.0",
    "networkx>=2.6.0,<4.0.0",
    "numpy>=1.20.0,<3.0.0",
    "openai>=1.0.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0",
    "pybind11>=2.10.0,<3.0.0",
    "python-dotenv>=0.19.0,<2.0.0",
    "rustworkx>=0.12.0,<1.0.0",
    "tqdm>=4.60.0,<5.0.0",
]
